--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
             <td style="padding:0px">
               <br>
               <p style="text-align:center;font-size:small;">
-                Credit: <a href="https://github.com/jonbarron/jonbarron_website">Jon Barron.</a>
+                Original design and source code: <a href="https://github.com/jonbarron/jonbarron_website">Jon Barron.</a>
               </p>
             </td>
           </tr>
