--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
               <p>I am a postdoctoral fellow at the <a href="https://www.up.ac.za/">University of Pretoria</a> in South Africa with Prof. Vukosi Marivate. I obtained my PhD in 2023 from the <a href="https://www.sun.ac.za/english">University of Stellenbosch</a>, where I was supervised by <a href="https://www.kamperh.com/">Prof. Herman Kamper</a>; I worked on keyword localisation for low-resource speech using visually grounded speech models.
               </p>
               <p>
-                My research interests include machine learning techniques and its applications to computer vision, natural language processing, and speech. Currently, I am working on investigating approaches for low resource language models and embeddings for African Languages.
+                My research interests include machine learning techniques and its applications to natural language and speech processing. Currently, I am working on investigating approaches for low resource language models and embeddings for African Languages.
               </p>
               <p style="text-align:center">
                 <a href="mailto:kaykola.olaleye@gmail.com">Email</a> &nbsp &nbsp
