--- a/index.html
+++ b/index.html
@@ -20,13 +20,19 @@
               <p style="text-align:center">
                 <name>Kayode Olaleye</name>
               </p>
-              <p>I am a postdoctoral fellow at the <a href="https://www.up.ac.za/">University of Pretoria</a> in South Africa with Prof. Vukosi Marivate. I obtained my PhD in 2023 from the <a href="https://www.sun.ac.za/english">University of Stellenbosch</a>, where I was supervised by <a href="https://www.kamperh.com/">Prof. Herman Kamper</a>; I worked on keyword localisation for low-resource speech using visually grounded speech models.
+              <p>Kayode Olaleye is a Postdoctoral Fellow at the <a href="https://www.up.ac.za/">University of Pretoria</a> in South Africa, affiliated with the DSFSI Lab led by Prof. Vukosi Marivate. In March 2023, Kayode obtained a PhD at the <a href="https://www.sun.ac.za/english">University of Stellenbosch</a> under the guidance of <a href="https://www.kamperh.com/">Prof. Herman Kamper</a>. The doctoral research primarily focused on localizing keywords for low-resource speech through visually grounded speech models.</p>
+
+                <p>Kayode possesses a keen research interest in machine learning techniques and their applications in natural language and speech processing. Currently, as a postdoctoral fellow, Kayode actively explores approaches for processing and generating code-switched and code-mixed data in African languages.</p>
+                
+                <p>Kayode endeavors to bridge the gap between the performance of language technologies applied to well-resourced languages and the underrepresented low-resource African languages. Leveraging expertise in machine learning, the goal is to develop practical solutions that tackle real-world challenges in these languages. Through research and collaboration, he aims to contribute to the advancement of language technologies for a more inclusive and diverse digital landscape.</p>
+                
+                <p>For further information or collaboration opportunities, feel free to contact kaykola.olaleye@gmail.com.</p>
+              <!-- <p>I am a postdoctoral fellow at the <a href="https://www.up.ac.za/">University of Pretoria</a> in South Africa with Prof. Vukosi Marivate. I obtained my PhD in 2023 from the <a href="https://www.sun.ac.za/english">University of Stellenbosch</a>, where I was supervised by <a href="https://www.kamperh.com/">Prof. Herman Kamper</a>; I worked on keyword localisation for low-resource speech using visually grounded speech models.
               </p>
               <p>
                 My research interests include machine learning techniques and their applications to natural language and speech processing. Currently, I am investigating approaches for processing and generating code-switched and code-mixed data for African Languages.
-              </p>
+              </p> -->
               <p style="text-align:center">
-                <a href="mailto:kaykola.olaleye@gmail.com">Email</a> &nbsp &nbsp
                 <a href="data/KayodeOlaleye-CV.pdf">CV</a> &nbsp &nbsp
                 <a href="https://scholar.google.com/citations?user=38WA7TcAAAAJ&hl=en">Google Scholar</a> &nbsp &nbsp
                 <a href="https://github.com/kayodeolaleye">Github</a>
