--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
               <p style="text-align:center">
                 <name>Kayode Olaleye</name>
               </p>
-              <p>Kayode Olaleye is a Postdoctoral Fellow at the <a href="https://www.up.ac.za/">University of Pretoria</a> in South Africa, affiliated with the <a href="https://dsfsi.github.io/">DSFSI Lab</a> led by <a href="https://www.vima.co.za/">Prof. Vukosi Marivate</a>. In March 2023, Kayode obtained a PhD at the <a href="https://www.sun.ac.za/english">University of Stellenbosch</a> under the guidance of <a href="https://www.kamperh.com/">Prof. Herman Kamper</a>. The doctoral research primarily focused on localizing keywords for low-resource speech through visually grounded speech models.</p>
+              <p>Kayode Olaleye is a Postdoctoral Fellow at the <a href="https://www.up.ac.za/">University of Pretoria</a> in South Africa, affiliated with the <a href="https://dsfsi.github.io/">Data Science for Social Impact (DSFSI) Lab</a> led by <a href="https://www.vima.co.za/">Prof. Vukosi Marivate</a>. In March 2023, Kayode obtained a PhD at the <a href="https://www.sun.ac.za/english">University of Stellenbosch</a> under the guidance of <a href="https://www.kamperh.com/">Prof. Herman Kamper</a>. The doctoral research primarily focused on localizing keywords for low-resource speech through visually grounded speech models.</p>
 
                 <p>Kayode possesses a keen research interest in machine learning techniques and their applications in natural language and speech processing. Currently, as a postdoctoral fellow, Kayode actively explores approaches for processing and generating code-switched and code-mixed data in African languages.</p>
                 
